fix: Nav z-index

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -66,6 +66,7 @@ nav {
   top: 94%;
   background-color: var(--color-grey-400);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  z-index: 10;
 
 }
 
